--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="ru.vinyarsky.androidaudioexample.ui.MainActivity"
-    >
+    tools:context="ru.vinyarsky.androidaudioexample.ui.MainActivity">
 
     <Button
-        android:id="@+id/play"
+        android:id="@+id/playButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/button_padding"
-        android:text="@string/play"/>
+        android:text="@string/play" />
 
     <Button
-        android:id="@+id/pause"
+        android:id="@+id/pauseButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/button_padding"
@@ -23,7 +22,7 @@
         android:enabled="false"/>
 
     <Button
-        android:id="@+id/stop"
+        android:id="@+id/stopButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/button_padding"
@@ -31,14 +30,14 @@
         android:enabled="false"/>
 
     <Button
-        android:id="@+id/skip_to_next"
+        android:id="@+id/skipToNextButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/button_padding"
         android:text="@string/next"/>
 
     <Button
-        android:id="@+id/skip_to_previous"
+        android:id="@+id/skipToPreviousButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/button_padding"
